--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 <body>
   <div id="hud">Score: 0 | High Score: 0</div>
-  <script src="three.min.js"></script>
+  <!-- 用 CDN 引入 Three.js -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.157.0/build/three.min.js"></script>
   <script src="game.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
